# IHDCB131_Students

./: .gitignore  CMakeLists.txt  README.md
1-Briques_de_base_d'un_programme/: 1.2b-NOM_DE_FAMILLE.c  1.3-NOM_DE_FAMILLE.c  1.4b-NOM_DE_FAMILLE.c  1.4c-NOM_DE_FAMILLE.c  1.5-NOM_DE_FAMILLE.c
1-Briques_de_base_d_un_programme/: 1.4c-NOM_DE_FAMILLE.c  1.5-NOM_DE_FAMILLE.c
2-La_selection/: 2.4a-NOM_DE_FAMILLE.c  2.4b-NOM_DE_FAMILLE.c
2-La_sélection/: 2.2b-NOM_DE_FAMILLE.c  2.4b-NOM_DE_FAMILLE.c  2.5-NOM_DE_FAMILLE.c
3-L'itération/: 3.3-NOM_DE_FAMILLE.c  3.4a-NOM_DE_FAMILLE.c  3.4b-NOM_DE_FAMILLE.c  3.5-NOM_DE_FAMILLE.c
3-L_iteration/: 3.3-NOM_DE_FAMILLE.c  3.4a-NOM_DE_FAMILLE.c  3.4b-NOM_DE_FAMILLE.c
4-Invariants/: 4.2-NOM_DE_FAMILLE.c  4.3-NOM_DE_FAMILLE.c  4.4-NOM_DE_FAMILLE.c  4.5-NOM_DE_FAMILLE.c
5-Appel_de_fonctions/: 5.5-NOM_DE_FAMILLE.c
6-Ecrire_des_fonctions/: 6.4a-NOM_DE_FAMILLE.c  6.4b-NOM_DE_FAMILLE.c
7-Tableaux/: 7.3-NOM_DE_FAMILLE.c  7.4a-NOM_DE_FAMILLE.c  7.4b-NOM_DE_FAMILLE.c
8-Chaines_de_caractères/: 8.3-NOM_DE_FAMILLE.c  8.4a-NOM_DE_FAMILLE.c  8.4b-NOM_DE_FAMILLE.c  8.5-NOM_DE_FAMILLE.c
9-Structures/: 9.3-NOM_DE_FAMILLE.c  9.4-NOM_DE_FAMILLE.c
Exercices/: 1.2a.c  1.2b-BENOIT.c  1.3-BENOIT.c  1.4a-BENOIT.c  1.4a-Code à corriger.c  1.4b-BENOIT.c  1.4c-BENOIT.c  1.5-BENOIT.c  1.5-BENOIT_Corrigé.c  2.2b-BENOIT.c  2.3a-BENOIT.c  2.4a-BENOIT.c  2.4b-BENOIT.c  2.5-BENOIT.c  3.2b-BENOIT.c  3.3-BENOIT.c  3.4a-BENOIT.c  3.4b-BENOIT.c  3.5-BENOIT.c  4.2-BENOIT.c  4.3-BENOIT.c  4.4-BENOIT.c  4.5-BENOIT.c  5.3-BENOIT.c  5.4-BENOIT.c  5.4b-BENOIT.c  5.5-BENOIT.c  5.5b-BENOIT.c  6.3-BENOIT.c  6.4a-BENOIT.c  6.4b-BENOIT.c  6.5-BENOIT.c  7.2b-BENOIT.c  7.3-BENOIT.c  7.4a-BENOIT.c  7.4b-BENOIT.c  7.5-BENOIT.c  8.2b-BENOIT.c  8.3-BENOIT.c  8.4a-BENOIT.c  (+9 more)
