cmake_minimum_required(VERSION 3.26)
project(IHDCB131_Exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(1.2b 1-Briques_de_base_d'un_programme/1.2b-NOM_DE_FAMILLE.c)
add_executable(1.3 1-Briques_de_base_d'un_programme/1.3-NOM_DE_FAMILLE.c)
add_executable(1.4b 1-Briques_de_base_d'un_programme/1.4b-NOM_DE_FAMILLE.c)
add_executable(1.4c 1-Briques_de_base_d'un_programme/1.4c-NOM_DE_FAMILLE.c)
add_executable(1.5 1-Briques_de_base_d'un_programme/1.5-NOM_DE_FAMILLE.c)

add_executable(2.2b 2-La_sélection/2.2b-NOM_DE_FAMILLE.c)
add_executable(2.4a 2-La_sélection/2.4a-NOM_DE_FAMILLE.c)
add_executable(2.4b 2-La_sélection/2.4b-NOM_DE_FAMILLE.c)
add_executable(2.5 2-La_sélection/2.5-NOM_DE_FAMILLE.c)

add_executable(3.3 3-L'itération/3.3-NOM_DE_FAMILLE.c)
add_executable(3.4a 3-L'itération/3.4a-NOM_DE_FAMILLE.c)
add_executable(3.4b 3-L'itération/3.4b-NOM_DE_FAMILLE.c)
add_executable(3.5 3-L'itération/3.5-NOM_DE_FAMILLE.c)