cmake_minimum_required(VERSION 3.26)
project(IHDCB131_Exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(1.2b 1-Briques_de_base_d'un_programme/1.2b-NOM_DE_FAMILLE.c)
add_executable(1.3 1-Briques_de_base_d'un_programme/1.3-NOM_DE_FAMILLE.c)
add_executable(1.4b 1-Briques_de_base_d'un_programme/1.4b-NOM_DE_FAMILLE.c)
add_executable(1.4c 1-Briques_de_base_d'un_programme/1.4c-NOM_DE_FAMILLE.c)
add_executable(1.5 1-Briques_de_base_d'un_programme/1.5-NOM_DE_FAMILLE.c)

add_executable(2.2b 2-La_sélection/2.2b-NOM_DE_FAMILLE.c)
add_executable(2.4a 2-La_sélection/2.4a-NOM_DE_FAMILLE.c)
add_executable(2.4b 2-La_sélection/2.4b-NOM_DE_FAMILLE.c)
add_executable(2.5 2-La_sélection/2.5-NOM_DE_FAMILLE.c)

add_executable(3.3 3-L'itération/3.3-NOM_DE_FAMILLE.c)
add_executable(3.4a 3-L'itération/3.4a-NOM_DE_FAMILLE.c)
add_executable(3.4b 3-L'itération/3.4b-NOM_DE_FAMILLE.c)
add_executable(3.5 3-L'itération/3.5-NOM_DE_FAMILLE.c)

add_executable(4.2 4-Invariants/4.2-NOM_DE_FAMILLE.c)
add_executable(4.3 4-Invariants/4.3-NOM_DE_FAMILLE.c)
add_executable(4.4 4-Invariants/4.4-NOM_DE_FAMILLE.c)
add_executable(4.5 4-Invariants/4.5-NOM_DE_FAMILLE.c)

add_executable(5.5 5-Appel_de_fonctions/5.5-NOM_DE_FAMILLE.c)

add_executable(6.4a 6-Ecrire_des_fonctions/6.4a-NOM_DE_FAMILLE.c)
add_executable(6.4b 6-Ecrire_des_fonctions/6.4b-NOM_DE_FAMILLE.c)
add_executable(6.5 6-Ecrire_des_fonctions/6.5-NOM_DE_FAMILLE.c)

add_executable(7.3 7-Tableaux/7.3-NOM_DE_FAMILLE.c)
add_executable(7.4a 7-Tableaux/7.4a-NOM_DE_FAMILLE.c)
add_executable(7.4b 7-Tableaux/7.4b-NOM_DE_FAMILLE.c)

add_executable(8.3 8-Chaines_de_caractères/8.3-NOM_DE_FAMILLE.c)
add_executable(8.4a 8-Chaines_de_caractères/8.4a-NOM_DE_FAMILLE.c)
add_executable(8.4b 8-Chaines_de_caractères/8.4b-NOM_DE_FAMILLE.c)
add_executable(8.5 8-Chaines_de_caractères/8.5-NOM_DE_FAMILLE.c)

add_executable(9.4 9-Structures/9.4-NOM_DE_FAMILLE.c)